--- a/package.json
+++ b/package.json
@@ -8,13 +8,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.7.2",
+    "@emotion/react": "^11",
+    "@emotion/styled": "^11",
+    "@zeit/next-sass": "^1.0.1",
+    "date-fns": "^2.27.0",
+    "framer-motion": "^4",
     "next": "12.0.4",
+    "node-sass": "^6.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-datepicker": "^4.5.0",
+    "react-dom": "17.0.2",
+    "react-input-mask": "^2.0.4"
   },
   "devDependencies": {
+    "@types/date-fns": "^2.6.0",
+    "@types/react-input-mask": "^3.0.1",
     "@types/node": "16.11.9",
     "@types/react": "17.0.35",
+    "@types/react-datepicker": "^4.3.2",
     "eslint": "7",
     "eslint-config-next": "12.0.4",
     "typescript": "4.5.2"
